user can change grid size

--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
     <div id="container">
         <div id="grid"></div>
         <div id="buttons">
-            <button id="red">red</button>
-            <button id="orange">orange</button>
-            <button id="yellow">yellow</button>
-            <button id="green">green</button>
-            <button id="blue">blue</button>
-            <button id="purple">purple</button>
+            <button id="clear">clear</button>
             <button id="GridSize">change grid size</button>
         </div>
     </div>
